2016-09-15  Oliver Lemke  <olemke@core-dump.info>

	* typhon/geodesy/__init__.py, typhon/physics/__init__.py:

	Remove __credits__ variables as they show up in editors with syntax
	checking as unused variables. Instead add a line to the docstring as a
	hidden Sphinx comment noting that the function originates from atmlab
	and state the original author.

	* typhon/arts/xml/write.py:

	(ARTSXMLWriter.write_basic_type): Set default value of attr to None.

	(ARTSXMLWriter.write_header): Remove obsolete arg from docs.

	(ARTSXMLWriter.write): Don't use str as a parameter name.

	(ARTSXMLWriter.write_ndarray): Remove redundant parenthesis.

2016-09-15  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/physics/__init__.py:

	Ported Fresnel and Snell functions from atmlab.

2016-09-15  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/arts/catalogues.py: Reimplemented Sparse class.

	The Sparse class is now a simple wrapper around SciPy's csc_matrix.

	The usage of both classes is exactly the same, the only differences are
	additional reading and writing functions for XML files as well as
	ARTS-consistent attributenames.

	Changes are **not** backwards compatible! Code relying on the old
	implementation of Sparse will fail and has to be adapted.

2016-09-13  Oliver Lemke  <olemke@core-dump.info>

	* typhon/version.py: Set DEVBUILD back to True after release.

2016-09-13  Oliver Lemke  <olemke@core-dump.info>

	* typhon/version.py: 0.3.2 Release.

2016-09-13  Oliver Lemke  <olemke@core-dump.info>

	* typhon/plots/stylelib/typhon.mplstyle:

	Revert (presumably accidental) change of default font size and
	linewidth to huge values.

2016-09-12  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/constants.py: Fixed attribute names for consistency.

2016-09-12  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/constants.py:

	Molar masses for dry air and water vapor are now listed in SI units.

	Old definitions from Wallace and Hobbs are deprecated and will be removed